Replace usage of deprecated API