@@ -2,7 +2,6 @@ package communitycommons;
 
 import com.mendix.core.Core;
 import com.mendix.core.CoreException;
-import com.mendix.core.conf.RuntimeVersion;
 import com.mendix.core.objectmanagement.member.MendixBoolean;
 import com.mendix.integration.WebserviceException;
 import com.mendix.systemwideinterfaces.core.IContext;
@@ -16,6 +15,8 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
@@ -142,8 +143,7 @@ public class Misc {
 	}
 
 	public static String getRuntimeVersion() {
-		RuntimeVersion runtimeVersion = RuntimeVersion.getInstance();
-		return runtimeVersion.toString();
+		return Core.getRuntimeVersion();
 	}
 
 	public static String getModelVersion() {
@@ -160,7 +160,7 @@ public class Misc {
 
 	public static String retrieveURL(String url, String postdata) throws Exception {
 		// Send data, appname
-		URLConnection conn = new URL(url).openConnection();
+		URLConnection conn = new URI(url).toURL().openConnection();
 
 		conn.setDoInput(true);
 		conn.setDoOutput(true);
@@ -188,7 +188,7 @@ public class Misc {
 			throw new Exception("No file to clone or to clone into provided");
 		}
 
-		MendixBoolean hasContents = (MendixBoolean) toClone.getMember(context, FileDocument.MemberNames.HasContents.toString());
+		MendixBoolean hasContents = (MendixBoolean) toClone.getMember(FileDocument.MemberNames.HasContents.toString());
 		if (!hasContents.getValue(context)) {
 			return false;
 		}
@@ -206,7 +206,7 @@ public class Misc {
 			throw new Exception("No file to clone or to clone into provided");
 		}
 
-		MendixBoolean hasContents = (MendixBoolean) toClone.getMember(context, FileDocument.MemberNames.HasContents.toString());
+		MendixBoolean hasContents = (MendixBoolean) toClone.getMember(FileDocument.MemberNames.HasContents.toString());
 		if (!hasContents.getValue(context)) {
 			return false;
 		}
@@ -220,14 +220,14 @@ public class Misc {
 		return true;
 	}
 
-	public static Boolean storeURLToFileDocument(IContext context, String url, IMendixObject __document, String filename) throws IOException {
+	public static Boolean storeURLToFileDocument(IContext context, String url, IMendixObject __document, String filename) throws IOException, URISyntaxException {
 		if (__document == null || url == null || filename == null) {
 			throw new IllegalArgumentException("No document, filename or URL provided");
 		}
 
 		final int MAX_REMOTE_FILESIZE = 1024 * 1024 * 200; //maximum of 200 MB
 		try {
-			URL imageUrl = new URL(url);
+			URL imageUrl = new URI(url).toURL();
 			URLConnection connection = imageUrl.openConnection();
 			//we connect in 20 seconds or not at all
 			connection.setConnectTimeout(20000);
@@ -255,9 +255,9 @@ public class Misc {
 				}
 				Core.storeFileDocumentContent(context, __document, filename, fileContentIS);
 			}
-		} catch (IOException ioe) {
-			Logging.error(LOGNODE, String.format("A problem occurred while reading from URL %s: %s", url, ioe.getMessage()));
-			throw ioe;
+		} catch (IOException | URISyntaxException e) {
+			Logging.error(LOGNODE, String.format("A problem occurred while reading from URL %s: %s", url, e.getMessage()));
+			throw e;
 		}
 
 		return true;
